@@ -5,7 +5,9 @@ import java.io.OutputStream;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 import java.util.Map.Entry;
 
 import javax.servlet.http.HttpSession;
@@ -63,9 +65,14 @@ public class InternalRequest implements Function {
 	public static final Key STATUS_CODE = KeyImpl.getInstance("status_code");
 
 	private static final Key CONTENT_TYPE = KeyImpl.getInstance("content-type");
+	private static final Key CONTENT_LENGTH = KeyImpl.getInstance("content-length");
+	private static final List<String> methods = Arrays.asList(new String[] { "GET", "POST", "HEAD", "PUT", "DELETE", "OPTIONS", "TRACE", "PATCH", "QUERY" });
 
 	public static Struct call(final PageContext pc, String template, String method, Object oUrls, Object oForms, Struct cookies, Struct headers, Object body, String strCharset,
 			boolean addToken, boolean throwonerror) throws PageException {
+		method = method.toUpperCase().trim();
+		if (methods.indexOf(method) < 0) throw new FunctionException(pc, "_InternalRequest", 2, "method",
+				"invalid method type [" + method + "], valid types are [" + ListUtil.arrayToList(methods.toArray(new String[0]), ",") + "]");
 		Struct urls = toStruct(oUrls);
 		Struct forms = toStruct(oForms);
 
@@ -86,7 +93,7 @@ public class InternalRequest implements Function {
 		String ext = ResourceUtil.getExtension(template, null);
 		// welcome files
 		if (StringUtil.isEmpty(ext)) {
-			throw new FunctionException(pc, "Invoke", 1, "url", "welcome file listing not supported, please define the template name.");
+			throw new FunctionException(pc, "InternalRequest", 1, "template", "template path is invalid");
 		}
 
 		// dialect
@@ -103,7 +110,7 @@ public class InternalRequest implements Function {
 			Charset cs = null;
 			// get charset
 			if (headers != null) {
-				String strCT = Caster.toString(headers.get(CONTENT_TYPE), null);
+				String strCT = Caster.toString(headers.get(CONTENT_TYPE, null), null);
 				if (strCT != null) {
 					ContentType ct = HTTPUtil.toContentType(strCT, null);
 					if (ct != null) {
@@ -118,7 +125,7 @@ public class InternalRequest implements Function {
 			_barr = str.getBytes(cs);
 		}
 
-		PageContextImpl _pc = createPageContext(pc, template, urls, cookies, headers, _barr, reqCharset, baos);
+		PageContextImpl _pc = createPageContext(pc, template, urls, cookies, headers, _barr, reqCharset, baos, method);
 		fillForm(_pc, forms, reqCharset);
 		Collection request, session = null;
 		int status;
@@ -126,7 +133,7 @@ public class InternalRequest implements Function {
 		boolean isText = false;
 		Charset _charset = null;
 		PageException pe = null;
-		Object rspCookies = cookieAsQuery ? new QueryImpl(new String[] { "name", "value", "path", "domain", "expires", "secure", "httpOnly", "samesite" }, 0, "cookies")
+		Object rspCookies = cookieAsQuery ? new QueryImpl(new String[] { "name", "value", "path", "domain", "expires", "secure", "httpOnly", "samesite", "partitioned" }, 0, "cookies")
 				: new StructImpl(Struct.TYPE_LINKED);
 
 		try {
@@ -176,6 +183,10 @@ public class InternalRequest implements Function {
 				else headers.set(name, values.iterator().next());
 			}
 
+			// content type and length
+			headers.set(CONTENT_TYPE, rsp.getContentType());
+			if (rsp.getContentLength() != -1) headers.set(CONTENT_LENGTH, rsp.getContentLength());
+
 			// status
 			status = rsp.getStatus();
 			ContentType ct = HTTPUtil.toContentType(rsp.getContentType(), null);
@@ -196,9 +207,9 @@ public class InternalRequest implements Function {
 		if (session != null) rst.set(KeyConstants._session, session);
 		rst.set(KeyConstants._headers, headers);
 		// rst.put(KeyConstants._debugging, debugging);
-		rst.set(KeyConstants._executionTime, new Double(exeTime));
-		rst.set(KeyConstants._status, new Double(status));
-		rst.set(STATUS_CODE, new Double(status));
+		rst.set(KeyConstants._executionTime, Double.valueOf(exeTime));
+		rst.set(KeyConstants._status, Double.valueOf(status));
+		rst.set(STATUS_CODE, Double.valueOf(status));
 		if (pe != null) rst.set(KeyConstants._error, pe.getCatchBlock(pc.getConfig()));
 		return rst;
 	}
@@ -286,14 +297,14 @@ public class InternalRequest implements Function {
 		trg.addRaw(null, list.toArray(new URLItem[list.size()]));
 	}
 
-	private static PageContextImpl createPageContext(PageContext pc, String template, Struct urls, Struct cookies, Struct headers, byte[] body, Charset charset, OutputStream os)
-			throws PageException {
+	private static PageContextImpl createPageContext(PageContext pc, String template, Struct urls, Struct cookies, Struct headers, byte[] body, Charset charset, OutputStream os,
+			String method) throws PageException {
 
 		HttpSession session = pc.getSessionType() == Config.SESSION_TYPE_JEE ? pc.getSession() : null;
 
 		return ThreadUtil.createPageContext(pc.getConfig(), os, pc.getHttpServletRequest().getServerName(), template, toQueryString(urls, charset),
 				CreatePageContext.toCookies(cookies), CreatePageContext.toPair(headers, true), body, CreatePageContext.toPair(new StructImpl(), true),
-				CreatePageContext.castValuesToString(new StructImpl()), true, -1, session);
+				CreatePageContext.castValuesToString(new StructImpl()), true, -1, session, method);
 	}
 
 	private static String toQueryString(Struct urls, Charset charset) throws PageException {
