@@ -28,7 +28,6 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Properties;
 
-import javax.mail.Authenticator;
 import javax.mail.BodyPart;
 import javax.mail.Flags;
 import javax.mail.Folder;
@@ -37,12 +36,14 @@ import javax.mail.Message;
 import javax.mail.MessagingException;
 import javax.mail.Multipart;
 import javax.mail.Part;
-import javax.mail.PasswordAuthentication;
 import javax.mail.Session;
 import javax.mail.Store;
+import javax.mail.UIDFolder;
 import javax.mail.internet.MimeMessage;
 import javax.mail.internet.MimeMultipart;
 import javax.mail.internet.MimeUtility;
+
+import org.apache.commons.mail.DefaultAuthenticator;
 
 import lucee.commons.digest.HashUtil;
 import lucee.commons.io.CharsetUtil;
@@ -91,56 +92,48 @@ public abstract class MailClient implements PoolItem {
 		return _store != null && _store.isConnected();
 	}
 
-	private static final Collection.Key FULLNAME = KeyImpl.getInstance("FULLNAME");
-	private static final Collection.Key UNREAD = KeyImpl.getInstance("UNREAD");
-	private static final Collection.Key PARENT = KeyImpl.getInstance("PARENT");
-	private static final Collection.Key TOTALMESSAGES = KeyImpl.getInstance("TOTALMESSAGES");
-	private static final Collection.Key NEW = KeyImpl.getInstance("NEW");
-
-	/**
-	 * Simple authenicator implmentation
-	 */
-	private final class _Authenticator extends Authenticator {
-
-		private String _fldif = null;
-		private String a = null;
-
-		@Override
-		protected PasswordAuthentication getPasswordAuthentication() {
-			return new PasswordAuthentication(_fldif, a);
-		}
-
-		public _Authenticator(String s, String s1) {
-			_fldif = s;
-			a = s1;
-		}
-	}
-
-	private static final Collection.Key DATE = KeyImpl.getInstance("date");
-	private static final Collection.Key SUBJECT = KeyImpl.getInstance("subject");
-	private static final Collection.Key SIZE = KeyImpl.getInstance("size");
-	private static final Collection.Key FROM = KeyImpl.getInstance("from");
-	private static final Collection.Key MESSAGE_NUMBER = KeyImpl.getInstance("messagenumber");
-	private static final Collection.Key MESSAGE_ID = KeyImpl.getInstance("messageid");
-	private static final Collection.Key REPLYTO = KeyImpl.getInstance("replyto");
-	private static final Collection.Key CC = KeyImpl.getInstance("cc");
-	private static final Collection.Key BCC = KeyImpl.getInstance("bcc");
-	private static final Collection.Key TO = KeyImpl.getInstance("to");
-	private static final Collection.Key UID = KeyImpl.getInstance("uid");
-	private static final Collection.Key HEADER = KeyImpl.getInstance("header");
-	private static final Collection.Key BODY = KeyImpl.getInstance("body");
-	private static final Collection.Key CIDS = KeyImpl.getInstance("cids");
-	private static final Collection.Key TEXT_BODY = KeyImpl.getInstance("textBody");
-	private static final Collection.Key HTML_BODY = KeyImpl.getInstance("HTMLBody");
-	private static final Collection.Key ATTACHMENTS = KeyImpl.getInstance("attachments");
-	private static final Collection.Key ATTACHMENT_FILES = KeyImpl.getInstance("attachmentfiles");
+	private static final Collection.Key FULLNAME = KeyConstants._FULLNAME;
+	private static final Collection.Key UNREAD = KeyConstants._UNREAD;
+	private static final Collection.Key PARENT = KeyConstants._PARENT;
+	private static final Collection.Key TOTALMESSAGES = KeyConstants._TOTALMESSAGES;
+	private static final Collection.Key NEW = KeyConstants._NEW;
+	private static final Collection.Key DATE = KeyConstants._date;
+	private static final Collection.Key SUBJECT = KeyConstants._subject;
+	private static final Collection.Key SIZE = KeyConstants._size;
+	private static final Collection.Key FROM = KeyConstants._from;
+	private static final Collection.Key MESSAGE_NUMBER = KeyConstants._messagenumber;
+	private static final Collection.Key MESSAGE_ID = KeyConstants._messageid;
+	private static final Collection.Key REPLYTO = KeyConstants._replyto;
+	private static final Collection.Key CC = KeyConstants._cc;
+	private static final Collection.Key BCC = KeyConstants._bcc;
+	private static final Collection.Key TO = KeyConstants._to;
+	private static final Collection.Key UID = KeyConstants._uid;
+	private static final Collection.Key HEADER = KeyConstants._header;
+	private static final Collection.Key BODY = KeyConstants._body;
+	private static final Collection.Key CIDS = KeyConstants._cids;
+	private static final Collection.Key TEXT_BODY = KeyConstants._textBody;
+	private static final Collection.Key HTML_BODY = KeyConstants._HTMLBody;
+	private static final Collection.Key ATTACHMENTS = KeyConstants._attachments;
+	private static final Collection.Key ATTACHMENT_FILES = KeyConstants._attachmentfiles;
+	private static final Collection.Key ANSWERED = KeyConstants._answered;
+	private static final Collection.Key DELETED = KeyConstants._deleted;
+	private static final Collection.Key DRAFT = KeyConstants._draft;
+	private static final Collection.Key FLAGGED = KeyConstants._flagged;
+	private static final Collection.Key RECENT = KeyConstants._recent;
+	private static final Collection.Key SEEN = KeyConstants._seen;
 
 	public static final int TYPE_POP3 = 0;
 	public static final int TYPE_IMAP = 1;
 
-	private String _flddo[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid" };
-	private String _fldnew[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid", "body", "textBody", "HTMLBody",
-			"attachments", "attachmentfiles", "cids" };
+	private String _popHeaders[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid" };
+	private String _popAll[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid", "answered", "deleted", "draft", "flagged",
+			"recent", "seen", "body", "textBody", "HTMLBody", "attachments", "attachmentfiles", "cids" };
+
+	private String _imapHeaders[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid", "answered", "deleted", "draft",
+			"flagged", "recent", "seen" };
+	private String _imapAll[] = { "date", "from", "messagenumber", "messageid", "replyto", "subject", "cc", "to", "size", "header", "uid", "answered", "deleted", "draft",
+			"flagged", "recent", "seen", "body", "textBody", "HTMLBody", "attachments", "attachmentfiles", "cids" };
+
 	private String server = null;
 	private String username = null;
 	private String password = null;
@@ -154,6 +147,7 @@ public abstract class MailClient implements PoolItem {
 	private Resource attachmentDirectory = null;
 	private final boolean secure;
 	private static Pool pool = new Pool(60000, 100, 5000);
+	private String delimiter = ",";
 
 	public static MailClient getInstance(int type, String server, int port, String username, String password, boolean secure, String name, String id) throws Exception {
 		String uid;
@@ -195,6 +189,7 @@ public abstract class MailClient implements PoolItem {
 		timeout = 60000;
 		startrow = 0;
 		maxrows = -1;
+		delimiter = ",";
 		uniqueFilenames = false;
 		this.server = server;
 		this.port = port;
@@ -239,6 +234,13 @@ public abstract class MailClient implements PoolItem {
 	}
 
 	/**
+	 * @param delimiter The delimiter to set.
+	 */
+	public void setDelimiter(String delimiter) {
+		this.delimiter = delimiter;
+	}
+
+	/**
 	 * connects to pop server
 	 * 
 	 * @throws MessagingException
@@ -256,26 +258,36 @@ public abstract class MailClient implements PoolItem {
 			properties.setProperty("mail." + type + ".ssl.enable", "true");
 			// properties.setProperty("mail."+type+".starttls.enable", "true" );
 			// allow using untrusted certs, good for CI
-			if (!Caster.toBooleanValue(SystemUtil.getSystemPropOrEnvVar("lucee.ssl.checkserveridentity", null), true)){
+			if (!Caster.toBooleanValue(SystemUtil.getSystemPropOrEnvVar("lucee.ssl.checkserveridentity", null), true)) {
 				properties.setProperty("mail." + type + ".ssl.trust", "*");
 				properties.setProperty("mail." + type + ".ssl.checkserveridentity", "false");
 			}
 		}
 
 		if (TYPE_IMAP == getType()) {
-			properties.setProperty("mail.imap.partialfetch", "false");
+			if (secure) {
+				properties.put("mail.store.protocol", "imaps");
+				properties.put("mail.imaps.partialfetch", "false");
+				properties.put("mail.imaps.fetchsize", "1048576");
+			}
+			else {
+				properties.put("mail.store.protocol", "imap");
+				properties.put("mail.imap.partialfetch", "false");
+				properties.put("mail.imap.fetchsize", "1048576");
+			}
 		}
 		// if(TYPE_POP3==getType()){}
-		_session = username != null ? Session.getInstance(properties, new _Authenticator(username, password)) : Session.getInstance(properties);
+		_session = username != null ? Session.getInstance(properties, new DefaultAuthenticator(username, password)) : Session.getInstance(properties);
 
-		Thread t =  Thread.currentThread();
+		Thread t = Thread.currentThread();
 		ClassLoader ccl = t.getContextClassLoader();
-		t.setContextClassLoader(_session.getClass().getClassLoader());		
+		t.setContextClassLoader(_session.getClass().getClassLoader());
 		try {
 			_store = _session.getStore(type);
 			if (!StringUtil.isEmpty(username)) _store.connect(server, port, username, password);
 			else _store.connect();
-		} finally {
+		}
+		finally {
 			t.setContextClassLoader(ccl);
 		}
 	}
@@ -293,12 +305,12 @@ public abstract class MailClient implements PoolItem {
 	 * @throws IOException
 	 * @throws PageException
 	 */
-	public void deleteMails(String as[], String as1[]) throws MessagingException, IOException, PageException {
+	public void deleteMails(String messageNumber, String uid) throws MessagingException, IOException, PageException {
 		Folder folder;
 		Message amessage[];
 		folder = _store.getFolder("INBOX");
 		folder.open(2);
-		Map<String, Message> map = getMessages(null, folder, as1, as, startrow, maxrows, false);
+		Map<String, Message> map = getMessages(null, folder, uid, messageNumber, startrow, maxrows, false);
 		Iterator<String> iterator = map.keySet().iterator();
 		amessage = new Message[map.size()];
 		int i = 0;
@@ -324,8 +336,15 @@ public abstract class MailClient implements PoolItem {
 	 * @throws IOException
 	 * @throws PageException
 	 */
-	public Query getMails(String[] messageNumbers, String[] uids, boolean all, String folderName) throws MessagingException, IOException, PageException {
-		Query qry = new QueryImpl(all ? _fldnew : _flddo, 0, "query");
+	public Query getMails(String messageNumbers, String uids, boolean all, String folderName) throws MessagingException, IOException, PageException {
+		Query qry;
+		if (getType() == TYPE_IMAP) {
+			qry = new QueryImpl(all ? _imapAll : _imapHeaders, 0, "query");
+		}
+		else {
+			qry = new QueryImpl(all ? _popAll : _popHeaders, 0, "query");
+		}
+
 		if (StringUtil.isEmpty(folderName, true)) folderName = "INBOX";
 		else folderName = folderName.trim();
 
@@ -359,13 +378,13 @@ public abstract class MailClient implements PoolItem {
 
 		// size
 		try {
-			qry.setAtEL(SIZE, row, new Double(message.getSize()));
+			qry.setAtEL(SIZE, row, Double.valueOf(message.getSize()));
 		}
 		catch (MessagingException e) {
 		}
 
 		qry.setAtEL(FROM, row, toList(getHeaderEL(message, "from")));
-		qry.setAtEL(MESSAGE_NUMBER, row, new Double(message.getMessageNumber()));
+		qry.setAtEL(MESSAGE_NUMBER, row, Double.valueOf(message.getMessageNumber()));
 		qry.setAtEL(MESSAGE_ID, row, toList(getHeaderEL(message, "Message-ID")));
 		String s = toList(getHeaderEL(message, "reply-to"));
 		if (s.length() == 0) {
@@ -376,6 +395,15 @@ public abstract class MailClient implements PoolItem {
 		qry.setAtEL(BCC, row, toList(getHeaderEL(message, "bcc")));
 		qry.setAtEL(TO, row, toList(getHeaderEL(message, "to")));
 		qry.setAtEL(UID, row, uid);
+		if (getType() == TYPE_IMAP) {
+			qry.setAtEL(ANSWERED, row, isSetEL(message, Flags.Flag.ANSWERED));
+			qry.setAtEL(DELETED, row, isSetEL(message, Flags.Flag.DELETED));
+			qry.setAtEL(DRAFT, row, isSetEL(message, Flags.Flag.DRAFT));
+			qry.setAtEL(FLAGGED, row, isSetEL(message, Flags.Flag.FLAGGED));
+			qry.setAtEL(RECENT, row, isSetEL(message, Flags.Flag.RECENT));
+			qry.setAtEL(SEEN, row, isSetEL(message, Flags.Flag.SEEN));
+		}
+
 		StringBuffer content = new StringBuffer();
 		try {
 			for (Enumeration enumeration = message.getAllHeaders(); enumeration.hasMoreElements(); content.append('\n')) {
@@ -403,6 +431,15 @@ public abstract class MailClient implements PoolItem {
 		}
 	}
 
+	private boolean isSetEL(Message message, Flags.Flag flag) {
+		try {
+			return message.isSet(flag);
+		}
+		catch (MessagingException e) {
+			return false;
+		}
+	}
+
 	/**
 	 * gets all messages from given Folder that match given criteria
 	 * 
@@ -418,26 +455,42 @@ public abstract class MailClient implements PoolItem {
 	 * @throws MessagingException
 	 * @throws PageException
 	 */
-	private Map<String, Message> getMessages(Query qry, Folder folder, String[] uids, String[] messageNumbers, int startRow, int maxRow, boolean all)
+	private Map<String, Message> getMessages(Query qry, Folder folder, String uids, String messageNumbers, int startRow, int maxRow, boolean all)
 			throws MessagingException, PageException {
 
-		Message[] messages = folder.getMessages();
+		Message[] messages = null;
+		String[] uidsStringArray = null;
 		Map<String, Message> map = qry == null ? new HashMap<String, Message>() : null;
 		int k = 0;
 		if (uids != null || messageNumbers != null) {
 			startRow = 0;
 			maxRow = -1;
 		}
+		if (uids != null) {
+			if (getType() == TYPE_IMAP) {
+				messages = ((UIDFolder) folder).getMessagesByUID(ListUtil.listToLongArray(uids, delimiter));
+			}
+			else { // POP3 folder doesn't supports the getMessagesByUID method from UIDFolder
+				uidsStringArray = ArrayUtil.trimItems(ListUtil.toStringArray(ListUtil.listToArrayRemoveEmpty(uids, delimiter)));
+			}
+		}
+		else if (messageNumbers != null) {
+			messages = folder.getMessages(ListUtil.listToIntArrayWithMaxRange(messageNumbers, ',', folder.getMessageCount()));
+		}
+
+		if (messages == null) messages = folder.getMessages();
+
 		Message message;
 		for (int l = startRow; l < messages.length; l++) {
 			if (maxRow != -1 && k == maxRow) {
 				break;
 			}
 			message = messages[l];
-			int messageNumber = message.getMessageNumber();
+			if (message == null) continue; // because the message can be a null for non existing messageNumbers
+
 			String id = getId(folder, message);
 
-			if (uids == null ? messageNumbers == null || contains(messageNumbers, messageNumber) : contains(uids, id)) {
+			if (uidsStringArray == null || (uidsStringArray != null && contains(uidsStringArray, id))) {
 				k++;
 				if (qry != null) {
 					toQuery(qry, message, id, all);
@@ -590,7 +643,7 @@ public abstract class MailClient implements PoolItem {
 
 				cids.setEL(KeyImpl.init(filename), cid);
 			}
-			else if((content = bodypart.getContent()) instanceof MimeMessage) {
+			else if ((content = bodypart.getContent()) instanceof MimeMessage) {
 				content = getConent(bodypart);
 				if (body.length() == 0) body.append(content);
 			}
@@ -625,7 +678,7 @@ public abstract class MailClient implements PoolItem {
 		InputStream is = null;
 
 		try {
-			if((bp.getContent()) instanceof MimeMessage) {
+			if ((bp.getContent()) instanceof MimeMessage) {
 				MimeMessage mimeContent = (MimeMessage) bp.getContent();
 				is = mimeContent.getInputStream();
 			}
@@ -786,7 +839,7 @@ public abstract class MailClient implements PoolItem {
 		return qry;
 	}
 
-	public void moveMail(String srcFolderName, String trgFolderName, String as[], String as1[]) throws MessagingException, PageException {
+	public void moveMail(String srcFolderName, String trgFolderName, String messageNumber, String uid) throws MessagingException, PageException {
 		if (StringUtil.isEmpty(srcFolderName, true)) srcFolderName = "INBOX";
 
 		Folder srcFolder = getFolder(srcFolderName, true, true, false);
@@ -796,7 +849,7 @@ public abstract class MailClient implements PoolItem {
 			srcFolder.open(2);
 			trgFolder.open(2);
 			Message amessage[];
-			Map<String, Message> map = getMessages(null, srcFolder, as1, as, startrow, maxrows, false);
+			Map<String, Message> map = getMessages(null, srcFolder, uid, messageNumber, startrow, maxrows, false);
 			Iterator<String> iterator = map.keySet().iterator();
 			amessage = new Message[map.size()];
 			int i = 0;
@@ -869,7 +922,7 @@ public abstract class MailClient implements PoolItem {
 			}
 			// max rows
 			if (maxrows > 0 && qry.getRecordcount() >= maxrows) break;
-
+			if ((f.getType() & Folder.HOLDS_MESSAGES) == 0) continue;
 			int row = qry.addRow();
 
 			Folder p = null;
