@@ -73,6 +73,7 @@ import lucee.commons.lang.ClassUtil;
 import lucee.commons.lang.ExceptionUtil;
 import lucee.commons.lang.IDGenerator;
 import lucee.commons.lang.StringUtil;
+import lucee.commons.lang.types.RefBooleanImpl;
 import lucee.commons.surveillance.HeapDumper;
 import lucee.loader.engine.CFMLEngine;
 import lucee.loader.osgi.BundleCollection;
@@ -103,6 +104,7 @@ import lucee.runtime.config.Constants;
 import lucee.runtime.config.DatasourceConnPool;
 import lucee.runtime.config.DebugEntry;
 import lucee.runtime.config.DeployHandler;
+import lucee.runtime.config.IdentificationWeb;
 import lucee.runtime.config.Password;
 import lucee.runtime.config.PasswordImpl;
 import lucee.runtime.config.RemoteClient;
@@ -214,29 +216,27 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private static final short ACCESS_WRITE = 11;
 
 	private static final Collection.Key DEBUG = KeyConstants._debug;
-	// private static final Collection.Key DEBUG_TEMPLATE = KeyImpl.intern("debugTemplate");
-	private static final Collection.Key DEBUG_SHOW_QUERY_USAGE = KeyImpl.getInstance("debugShowQueryUsage");
-	// private static final Collection.Key STR_DEBUG_TEMPLATE = KeyImpl.intern("strdebugTemplate");
+	private static final Collection.Key DEBUG_SHOW_QUERY_USAGE = KeyConstants._debugShowQueryUsage;
 	private static final Collection.Key TEMPLATES = KeyConstants._templates;
 	private static final Collection.Key STR = KeyConstants._str;
-	private static final Collection.Key DO_STATUS_CODE = KeyImpl.getInstance("doStatusCode");
+	private static final Collection.Key DO_STATUS_CODE = KeyConstants._doStatusCode;
 	private static final Collection.Key LABEL = KeyConstants._label;
-	private static final Collection.Key FILE_ACCESS = KeyImpl.getInstance("file_access");
-	private static final Collection.Key IP_RANGE = KeyImpl.getInstance("ipRange");
+	private static final Collection.Key FILE_ACCESS = KeyConstants._file_access;
+	private static final Collection.Key IP_RANGE = KeyConstants._ipRange;
 	private static final Collection.Key CUSTOM = KeyConstants._custom;
 	private static final Collection.Key READONLY = KeyConstants._readOnly;
-	private static final Collection.Key LOG_ENABLED = KeyImpl.getInstance("logEnabled");
+	private static final Collection.Key LOG_ENABLED = KeyConstants._logEnabled;
 	private static final Collection.Key CLASS = KeyConstants._class;
 
-	private static final Key HAS_OWN_SEC_CONTEXT = KeyImpl.getInstance("hasOwnSecContext");
-	private static final Key CONFIG_FILE = KeyImpl.getInstance("config_file");
-	private static final Key PROCEDURE = KeyImpl.getInstance("procedure");
-	private static final Key SERVER_LIBRARY = KeyImpl.getInstance("serverlibrary");
-	private static final Key KEEP_ALIVE = KeyImpl.getInstance("keepalive");
-	private static final Key CLIENT_SIZE = KeyImpl.getInstance("clientSize");
-	private static final Key SESSION_SIZE = KeyImpl.getInstance("sessionSize");
-	private static final Key CLIENT_ELEMENTS = KeyImpl.getInstance("clientElements");
-	private static final Key SESSION_ELEMENTS = KeyImpl.getInstance("sessionElements");
+	private static final Key HAS_OWN_SEC_CONTEXT = KeyConstants._hasOwnSecContext;
+	private static final Key CONFIG_FILE = KeyConstants._config_file;
+	private static final Key PROCEDURE = KeyConstants._procedure;
+	private static final Key SERVER_LIBRARY = KeyConstants._serverlibrary;
+	private static final Key KEEP_ALIVE = KeyConstants._keepalive;
+	private static final Key CLIENT_SIZE = KeyConstants._clientSize;
+	private static final Key SESSION_SIZE = KeyConstants._sessionSize;
+	private static final Key CLIENT_ELEMENTS = KeyConstants._clientElements;
+	private static final Key SESSION_ELEMENTS = KeyConstants._sessionElements;
 
 	private static final short MAPPING_REGULAR = 1;
 	private static final short MAPPING_CT = 2;
@@ -248,15 +248,16 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private boolean singleMode;
 	private Password password;
 	private ConfigAdmin admin;
-	private ConfigPro config;
+	private ConfigPro config = null;
+	private ConfigWebPro configWeb = null;
 
 	private static final ResourceFilter FILTER_CFML_TEMPLATES = new OrResourceFilter(
 			new ResourceFilter[] { new DirectoryResourceFilter(), new ExtensionResourceFilter(Constants.getExtensions()) });
-	private static final Key FRAGMENT = KeyImpl.getInstance("fragment");
+	private static final Key FRAGMENT = KeyConstants._fragment;
 	private static final Key HEADERS = KeyConstants._headers;
-	private static final Key SYMBOLIC_NAME = KeyImpl.getInstance("symbolicName");
-	private static final Key VENDOR = KeyImpl.getInstance("vendor");
-	private static final Key USED_BY = KeyImpl.getInstance("usedBy");
+	private static final Key SYMBOLIC_NAME = KeyConstants._symbolicName;
+	private static final Key VENDOR = KeyConstants._vendor;
+	private static final Key USED_BY = KeyConstants._usedBy;
 	private static final Key PATH = KeyConstants._path;
 	private AdminSync adminSync;
 
@@ -268,7 +269,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 	@Override
 	public void setDynamicAttribute(String uri, String localName, Object value) {
-		attributes.setEL(KeyImpl.getInstance(localName), value);
+		attributes.setEL(KeyImpl.init(localName), value);
 	}
 
 	@Override
@@ -278,7 +279,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 	@Override
 	public int doStartTag() throws PageException {
-		config = (ConfigPro) pageContext.getConfig();
+		config = configWeb = (ConfigWebPro) pageContext.getConfig();
 
 		// print();
 
@@ -440,15 +441,15 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			schedule.setEnddate(getObject("endDate", null));
 			schedule.setEndtime(getObject("endTime", null));
 			schedule.setInterval(getString("interval", null));
-			schedule.setRequesttimeout(new Double(getDouble("requestTimeOut", -1)));
+			schedule.setRequesttimeout(Double.valueOf(getDouble("requestTimeOut", -1)));
 			schedule.setUsername(getString("username", null));
 			schedule.setPassword(getString("schedulePassword", null));
 			schedule.setProxyserver(getString("proxyServer", null));
 			schedule.setProxyuser(getString("proxyuser", null));
 			schedule.setProxypassword(getString("proxyPassword", null));
 			schedule.setResolveurl(getBoolV("resolveURL", false));
-			schedule.setPort(new Double(getDouble("port", -1)));
-			schedule.setProxyport(new Double(getDouble("proxyPort", 80)));
+			schedule.setPort(Double.valueOf(getDouble("port", -1)));
+			schedule.setProxyport(Double.valueOf(getDouble("proxyPort", 80)));
 			schedule.setUnique(getBoolV("unique", false));
 
 			String rtn = getString("returnvariable", null);
@@ -539,7 +540,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	 * 
 	 */
 	private void _doStartTag() throws PageException, IOException {
-		config = (ConfigPro) pageContext.getConfig();
+		config = configWeb = (ConfigWebPro) pageContext.getConfig();
 
 		// getToken
 		if (action.equals("gettoken")) {
@@ -601,7 +602,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		try {
 			// Password
 			String strPW = getString("password", "");
-			Password tmp = type == TYPE_SERVER ? ((ConfigWebPro) config).isServerPasswordEqual(strPW) : config.isPasswordEqual(strPW); // hash password if
+			Password tmp = type == TYPE_SERVER ? configWeb.isServerPasswordEqual(strPW) : config.isPasswordEqual(strPW); // hash password if
 			// necessary (for
 			// backward
 			// compatibility)
@@ -706,7 +707,6 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		else if (check("getRestMappings", ACCESS_FREE) && check2(ACCESS_READ)) doGetRestMappings();
 		else if (check("getRestSettings", ACCESS_FREE) && check2(ACCESS_READ)) doGetRestSettings();
 		else if ((check("getRHExtensionProviders", ACCESS_FREE) || check("getExtensionProviders", ACCESS_FREE)) && check2(ACCESS_READ)) doGetRHExtensionProviders();
-		else if (check("getExtensionInfo", ACCESS_FREE) && check2(ACCESS_READ)) doGetExtensionInfo();
 
 		else if (check("getCustomTagMappings", ACCESS_FREE) && check2(ACCESS_READ)) doGetCustomTagMappings();
 		else if (check("getComponentMappings", ACCESS_FREE) && check2(ACCESS_READ)) doGetComponentMappings();
@@ -861,8 +861,6 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		else if (check("getAdminSyncClass", ACCESS_FREE) && check2(ACCESS_READ)) doGetAdminSyncClass();
 		else if (check("updateAdminSyncClass", ACCESS_FREE) && check2(ACCESS_WRITE)) doUpdateAdminSyncClass();
 
-		else if (check("getVideoExecuterClass", ACCESS_FREE) && check2(ACCESS_READ)) doGetVideoExecuterClass();
-		else if (check("updateVideoExecuterClass", ACCESS_FREE) && check2(ACCESS_WRITE)) doUpdateVideoExecuterClass();
 		else if (check("terminateRunningThread", ACCESS_FREE) && check2(ACCESS_WRITE)) doTerminateRunningThread();
 
 		else if (check("updateLabel", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doUpdateLabel();
@@ -870,9 +868,10 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		else if (check("runUpdate", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doRunUpdate();
 		else if (check("removeUpdate", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doRemoveUpdate();
 		else if (check("changeVersionTo", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doChangeVersionTo();
+		else if (check("mvnChangeVersionTo", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doMvnChangeVersionTo();
 		else if (check("getUpdate", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doGetUpdate();
-		else if (check("getMinVersion", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_READ)) getMinVersion();
-		else if (check("getLoaderInfo", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_READ)) getLoaderInfo();
+		else if (check("getMinVersion", ACCESS_FREE) && check2(ACCESS_READ)) getMinVersion();
+		else if (check("getLoaderInfo", ACCESS_FREE) && check2(ACCESS_READ)) getLoaderInfo();
 		else if (check("listPatches", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_READ)) listPatches();
 		else if (check("updateupdate", ACCESS_NOT_WHEN_WEB) && check2(ACCESS_WRITE)) doUpdateUpdate();
 		else if (check("getSerial", ACCESS_FREE) && check2(ACCESS_READ)) doGetSerial();
@@ -931,6 +930,17 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		try {
 			Version version = OSGiUtil.toVersion(getString("admin", "changeVersionTo", "version"));
 			admin.changeVersionTo(version, password, pageContext.getConfig().getIdentification());
+			adminSync.broadcast(attributes, config);
+		}
+		catch (BundleException e) {
+			throw Caster.toPageException(e);
+		}
+	}
+
+	private void doMvnChangeVersionTo() throws PageException {
+		try {
+			Version version = OSGiUtil.toVersion(getString("admin", "changeVersionTo", "version"));
+			admin.mvnChangeVersionTo(version, password, pageContext.getConfig().getIdentification());
 			adminSync.broadcast(attributes, config);
 		}
 		catch (BundleException e) {
@@ -1210,7 +1220,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doListAuthKey() throws PageException {
-		ConfigServerImpl cs = (ConfigServerImpl) config;
+		ConfigServerImpl cs = config instanceof ConfigServer ? (ConfigServerImpl) config : (ConfigServerImpl) ConfigWebUtil.getConfigServer(config, password);
 		pageContext.setVariable(getString("admin", action, "returnVariable"), Caster.toArray(cs.getAuthenticationKeys()));
 	}
 
@@ -1240,8 +1250,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 			qry.setAtEL(CONFIG_FILE, row, factory.getConfig().getConfigFile().getAbsolutePath());
 			if (factory.getURL() != null) qry.setAtEL(KeyConstants._url, row, factory.getURL().toExternalForm());
-
-			qry.setAtEL(KeyConstants._id, row, factory.getConfig().getIdentification().getId());
+			IdentificationWeb id = factory.getConfig().getIdentification();
+			qry.setAtEL(KeyConstants._id, row, id == null ? "" : id.getId());
 			qry.setAtEL(KeyConstants._hash, row, SystemUtil.hash(factory.getConfig().getServletContext()));
 			qry.setAtEL(KeyConstants._label, row, factory.getLabel());
 			qry.setAtEL(HAS_OWN_SEC_CONTEXT, row, Caster.toBoolean(cw.hasIndividualSecurityManager()));
@@ -1340,7 +1350,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 	private void doRemoveContext() throws PageException {
 		String strRealpath = getString("admin", action, "destination");
-		ConfigServerImpl server = (ConfigServerImpl) config;
+		ConfigServerImpl server = config instanceof ConfigServer ? (ConfigServerImpl) config : (ConfigServerImpl) ConfigWebUtil.getConfigServer(config, password);
 
 		try {
 			admin.removeContext(server, true, ThreadLocalPageContext.getLog(pageContext, "deploy"), strRealpath);
@@ -1437,6 +1447,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		pageContext.setVariable(getString("admin", action, "returnVariable"), sct);
 
 		sct.set("varUsage", AppListenerUtil.toVariableUsage(config.getQueryVarUsage(), "ignore"));
+		sct.set("limitEvaluation", config.limitEvaluation());
 	}
 
 	/**
@@ -1511,14 +1522,17 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doGetLoggedDebugData() throws PageException {
-		if (config instanceof ConfigServer) return;
 
-		ConfigWebPro cw = (ConfigWebPro) config;
+		// to get logged debugging data config should be a ConfigWebPro,
+		// for singleMode config is always ConfigServer so config must be redefine if it was singleMode
+		if (singleMode) config = configWeb = (ConfigWebPro) pageContext.getConfig();
+
+		ConfigWebPro cw = configWeb;
 		String id = getString("id", null);
 		Array data = cw.getDebuggerPool().getData(pageContext);
 
 		if (StringUtil.isEmpty(id)) {
-			pageContext.setVariable(getString("admin", action, "returnVariable"), data);
+			pageContext.setVariable(getString("admin", action, "returnVariable"), Duplicator.duplicate(data, true));
 		}
 		else {
 			Iterator<Object> it = data.valueIterator();
@@ -1526,7 +1540,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			while (it.hasNext()) {
 				sct = (Struct) it.next();
 				if (OpUtil.equalsEL(ThreadLocalPageContext.get(), id, sct.get(KeyConstants._id, ""), false, true)) {
-					pageContext.setVariable(getString("admin", action, "returnVariable"), sct);
+					pageContext.setVariable(getString("admin", action, "returnVariable"), Duplicator.duplicate(sct, true));
 					return;
 				}
 			}
@@ -1535,9 +1549,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doPurgeDebugPool() throws PageException {
-		if (config instanceof ConfigServer) return;
-		ConfigWebPro cw = (ConfigWebPro) config;
-		cw.getDebuggerPool().purge();
+		configWeb.getDebuggerPool().purge();
 	}
 
 	private void doPurgeExpiredSessions() throws PageException {
@@ -1558,10 +1570,9 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doGetInfo() throws PageException {
 		Struct sct = new StructImpl();
 		pageContext.setVariable(getString("admin", action, "returnVariable"), sct);
-
 		if (config instanceof ConfigWebPro) {
 			ConfigWebPro cw = (ConfigWebPro) config;
-			sct.setEL(KeyConstants._id, cw.getIdentification().getId());
+			sct.setEL(KeyConstants._id, config.getIdentification().getId());
 			sct.setEL(KeyConstants._label, cw.getLabel());
 			sct.setEL(KeyConstants._hash, cw.getHash());
 
@@ -1571,7 +1582,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		}
 		else {
 			sct.setEL("configServerDir", config.getConfigDir().getAbsolutePath());
-			sct.setEL("configWebDir", pageContext.getConfig().getConfigDir().getAbsolutePath());
+			sct.setEL("configWebDir", configWeb.getConfigDir().getAbsolutePath());
 		}
 
 		sct.setEL(KeyConstants._config, config.getConfigFile().getAbsolutePath());
@@ -1629,11 +1640,15 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doUpdateDefaultSecurityManager() throws PageException {
-
-		admin.updateDefaultSecurity(fb("setting"), SecurityManagerImpl.toShortAccessValue(getString("admin", action, "file")), getFileAcces(), fb("direct_java_access"), fb("mail"),
-				SecurityManagerImpl.toShortAccessValue(getString("admin", action, "datasource")), fb("mapping"), fb("remote"), fb("custom_tag"), fb("cfx_setting"), fb("cfx_usage"),
-				fb("debugging"), fb("search"), fb("scheduled_task"), fb("tag_execute"), fb("tag_import"), fb("tag_object"), fb("tag_registry"), fb("cache"), fb("gateway"),
-				fb("orm"), fb2("access_read"), fb2("access_write"));
+		if (singleMode) {
+			admin.updateDefaultSecurity(fb2("access_read"), fb2("access_write"));
+		}
+		else {
+			admin.updateDefaultSecurity(fb("setting"), SecurityManagerImpl.toShortAccessValue(getString("admin", action, "file")), getFileAcces(), fb("direct_java_access"),
+					fb("mail"), SecurityManagerImpl.toShortAccessValue(getString("admin", action, "datasource")), fb("mapping"), fb("remote"), fb("custom_tag"), fb("cfx_setting"),
+					fb("cfx_usage"), fb("debugging"), fb("search"), fb("scheduled_task"), fb("tag_execute"), fb("tag_import"), fb("tag_object"), fb("tag_registry"), fb("cache"),
+					fb("gateway"), fb("orm"), fb2("access_read"), fb2("access_write"));
+		}
 		store();
 		adminSync.broadcast(attributes, config);
 	}
@@ -1756,8 +1771,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doUpdateSecurity() throws PageException {
-
-		admin.updateSecurity(getString("varUsage", ""));
+		admin.updateSecurity(getString("varUsage", ""), getBool("limitEvaluation", null));
 		store();
 		adminSync.broadcast(attributes, config);
 	}
@@ -2122,57 +2136,11 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		pageContext.setVariable(getString("admin", action, "returnVariable"), qry);
 	}
 
-	private void doGetExtensionInfo() throws PageException {
-		Resource ed = config.getExtensionDirectory();
-		Struct sct = new StructImpl();
-		sct.set(KeyConstants._directory, ed.getPath());
-		sct.set(KeyConstants._enabled, Caster.toBoolean(config.isExtensionEnabled()));
-
-		pageContext.setVariable(getString("admin", action, "returnVariable"), sct);
-	}
-
-	/*
-	 * private void doGetExtensions() throws PageException { Extension[] extensions =
-	 * config.getExtensions(); lucee.runtime.type.Query qry = new QueryImpl(new String[] { "type",
-	 * "provider", "id", "config", "version", "category", "description", "image", "label", "name",
-	 * "author", "codename", "video", "support", "documentation", "forum", "mailinglist", "network",
-	 * "created" }, 0, "query");
-	 * 
-	 * String provider = getString("provider", null); String id = getString("id", null); Extension
-	 * extension; String extProvider, extId; int row = 0; for (int i = 0; i < extensions.length; i++) {
-	 * extension = extensions[i]; if(!extension.getType().equalsIgnoreCase("all") &&
-	 * toType(extension.getType(), false) != type) continue;
-	 * 
-	 * extProvider = extension.getProvider(); extId = extension.getId(); if(provider != null &&
-	 * !provider.equalsIgnoreCase(extProvider)) continue; if(id != null && !id.equalsIgnoreCase(extId))
-	 * continue;
-	 * 
-	 * qry.addRow(); row++; qry.setAt("provider", row, extProvider); qry.setAt(KeyConstants._id, row,
-	 * extId); qry.setAt(KeyConstants._config, row, extension.getConfig(pageContext));
-	 * qry.setAt(KeyConstants._version, row, extension.getVersion());
-	 * 
-	 * qry.setAt("category", row, extension.getCategory()); qry.setAt(KeyConstants._description, row,
-	 * extension.getDescription()); qry.setAt("image", row, extension.getImage());
-	 * qry.setAt(KeyConstants._label, row, extension.getLabel()); qry.setAt(KeyConstants._name, row,
-	 * extension.getName());
-	 * 
-	 * qry.setAt(KeyConstants._author, row, extension.getAuthor()); qry.setAt("codename", row,
-	 * extension.getCodename()); qry.setAt("video", row, extension.getVideo()); qry.setAt("support",
-	 * row, extension.getSupport()); qry.setAt("documentation", row, extension.getDocumentation());
-	 * qry.setAt("forum", row, extension.getForum()); qry.setAt("mailinglist", row,
-	 * extension.getMailinglist()); qry.setAt("network", row, extension.getNetwork());
-	 * qry.setAt(KeyConstants._created, row, extension.getCreated()); qry.setAt(KeyConstants._type, row,
-	 * extension.getType());
-	 * 
-	 * } pageContext.setVariable(getString("admin", action, "returnVariable"), qry); }
-	 */
-
 	private void doGetMappings() throws PageException {
 
 		Mapping[] mappings = config.getMappings();
-		lucee.runtime.type.Query qry = new QueryImpl(
-				new String[] { "archive", "strarchive", "physical", "strphysical", "virtual", "hidden", "physicalFirst", "readonly", "inspect", "toplevel" }, mappings.length,
-				"query");
+		lucee.runtime.type.Query qry = new QueryImpl(new String[] { "archive", "strarchive", "physical", "strphysical", "virtual", "hidden", "physicalFirst", "readonly", "inspect",
+				"toplevel", "listenerType", "listenerMode" }, mappings.length, "query");
 
 		for (int i = 0; i < mappings.length; i++) {
 			MappingImpl m = (MappingImpl) mappings[i];
@@ -2187,6 +2155,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			qry.setAt("readonly", row, Caster.toBoolean(m.isReadonly()));
 			qry.setAt("inspect", row, ConfigWebUtil.inspectTemplate(m.getInspectTemplateRaw(), ""));
 			qry.setAt("toplevel", row, Caster.toBoolean(m.isTopLevel()));
+			qry.setAt("listenerType", row, ConfigWebUtil.toListenerType(m.getListenerType(), "inherit"));
+			qry.setAt("listenerMode", row, ConfigWebUtil.toListenerMode(m.getListenerMode(), "inherit"));
 		}
 		pageContext.setVariable(getString("admin", action, "returnVariable"), qry);
 	}
@@ -2231,17 +2201,6 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 	private void doGetAdminSyncClass() throws PageException {
 		pageContext.setVariable(getString("admin", action, "returnVariable"), config.getAdminSyncClass().getName());
-	}
-
-	private void doUpdateVideoExecuterClass() throws PageException {
-		ClassDefinition cd = new ClassDefinitionImpl(getString("admin", action, "class"), getString("bundleName", null), getString("bundleVersion", null),
-				config.getIdentification());
-		admin.updateVideoExecuterClass(cd);
-		store();
-	}
-
-	private void doGetVideoExecuterClass() throws PageException {
-		pageContext.setVariable(getString("admin", action, "returnVariable"), config.getVideoExecuterClass().getName());
 	}
 
 	/**
@@ -2403,9 +2362,9 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			configWeb.getConfigDir();
 			configWeb.getIdentification().getId();
 			configWeb.getConfigDir();
-			qry.setAt("Id", row, new Double(pc.getId()));
+			qry.setAt("Id", row, Double.valueOf(pc.getId()));
 			qry.setAt("Start", row, new DateTimeImpl(pc.getStartTime(), false));
-			qry.setAt("Timeout", row, new Double(pc.getRequestTimeout() / 1000));
+			qry.setAt("Timeout", row, Double.valueOf(pc.getRequestTimeout() / 1000));
 
 			PageContext root = pc.getRootPageContext();
 			qry.setAt("ThreadType", row, (root != null && root != pc) ? "main" : "child");
@@ -2673,18 +2632,20 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			cn = "com.microsoft.sqlserver.jdbc.SQLServerDriver";
 		}
 
-		Pattern pattern = Pattern.compile("[a-zA-Z0-9_]*");
-		Matcher matcher = pattern.matcher(getString("admin", action, "newName"));
+		String tmp = getString("admin", action, "newName");
+		Pattern pattern = Pattern.compile("[a-zA-Z0-9_-]*");
+		Matcher matcher = pattern.matcher(tmp);
 
 		if (matcher.matches() == false) {
-			throw new ExpressionException("Trying to create a data source with a name that is invalid. Data source Names must match proper variable naming conventions");
+			throw new ExpressionException("Failed to create a datasource name [" + tmp
+					+ "]: only alphanumeric characters, underscores (_), and hyphens (-) are valid. Please ensure the name conforms to these formats.");
 		}
 
 		ClassDefinition cd = new ClassDefinitionImpl(cn, getString("bundleName", null), getString("bundleVersion", null), config.getIdentification());
 
 		// customParameterSyntax
-		Struct sct = getStruct("customParameterSyntax", null);
-		ParamSyntax ps = (sct != null && sct.containsKey("delimiter") && sct.containsKey("separator")) ? ParamSyntax.toParamSyntax(sct) : ParamSyntax.DEFAULT;
+		// Struct sct = getStruct("customParameterSyntax", null);
+		ParamSyntax ps = ParamSyntax.toParamSyntax(attributes, ParamSyntax.DEFAULT);
 
 		//
 		boolean literalTimestampWithTSOffset = getBoolV("literalTimestampWithTSOffset", false);
@@ -3149,7 +3110,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doUpdateCompilerSettings() throws SecurityException, PageException {
 		admin.updateCompilerSettings(getBoolObject("admin", "UpdateCompilerSettings", "dotNotationUpperCase"),
 				getBoolObject("admin", "UpdateCompilerSettings", "suppressWSBeforeArg"), getBoolObject("admin", "UpdateCompilerSettings", "nullSupport"),
-				getBoolObject("admin", "UpdateCompilerSettings", "handleUnquotedAttrValueAsString"), getInteger("admin", "UpdateCompilerSettings", "externalizeStringGTE"));
+				getBoolObject("admin", "UpdateCompilerSettings", "handleUnquotedAttrValueAsString"), getInteger("admin", "UpdateCompilerSettings", "externalizeStringGTE"),
+				getBoolObject("admin", "UpdateCompilerSettings", "preciseMath"));
 		admin.updateTemplateCharset(getString("admin", action, "templateCharset"));
 
 		store();
@@ -3189,6 +3151,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		sct.set("handleUnquotedAttrValueAsString", config.getHandleUnQuotedAttrValueAsString() ? Boolean.TRUE : Boolean.FALSE);
 		sct.set("templateCharset", config.getTemplateCharset());
 		sct.set("externalizeStringGTE", Caster.toDouble(config.getExternalizeStringGTE()));
+		sct.set("preciseMath", config.getPreciseMath());
 
 	}
 
@@ -3305,7 +3268,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	}
 
 	private void doGetGatewayEntries() throws PageException {
-		Map entries = ((GatewayEngineImpl) ((ConfigWebPro) config).getGatewayEngine()).getEntries();
+		Map entries = ((GatewayEngineImpl) (configWeb).getGatewayEngine()).getEntries();
 		Iterator it = entries.entrySet().iterator();
 		lucee.runtime.type.Query qry = new QueryImpl(
 				new String[] { "class", "bundleName", "bundleVersion", "id", "custom", "cfcPath", "listenerCfcPath", "startupMode", "state", "readOnly" }, 0, "entries");
@@ -3420,7 +3383,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			str = Caster.toString(h.get("Bundle-Description", null), null);
 			if (StringUtil.isEmpty(str)) str = Caster.toString(h.get("Implementation-Description", null), null);
 			if (StringUtil.isEmpty(str)) str = Caster.toString(h.get("Specification-Description", null), null);
-			if (!StringUtil.isEmpty(str)) sct.set(KeyConstants._description, str);
+			sct.set(KeyConstants._description, str);
 
 			// Vendor
 			str = Caster.toString(h.get("Bundle-Vendor", null), null);
@@ -3665,7 +3628,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doGetGatewayEntry() throws PageException {
 
 		String id = getString("admin", action, "id");
-		Map entries = ((GatewayEngineImpl) ((ConfigWebPro) config).getGatewayEngine()).getEntries();
+		Map entries = ((GatewayEngineImpl) configWeb.getGatewayEngine()).getEntries();
 		Iterator it = entries.keySet().iterator();
 		GatewayEntry ge;
 		// Gateway g;
@@ -3698,7 +3661,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 		String id = getString("admin", action, "id");
 		String act = getString("admin", action, "gatewayAction").trim().toLowerCase();
-		GatewayEngineImpl eng = ((GatewayEngineImpl) ((ConfigWebPro) config).getGatewayEngine());
+		GatewayEngineImpl eng = ((GatewayEngineImpl) configWeb.getGatewayEngine());
 		if ("restart".equals(act)) eng.restart(id);
 		else if ("start".equals(act)) eng.start(id);
 		else if ("stop".equals(act)) eng.stop(id);
@@ -3765,7 +3728,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		else if (strType.equals("http")) type = ConfigPro.CACHE_TYPE_HTTP;
 		else if (strType.equals("file")) type = ConfigPro.CACHE_TYPE_FILE;
 		else if (strType.equals("webservice")) type = ConfigPro.CACHE_TYPE_WEBSERVICE;
-		else throw new ApplicationException("inv,query,resource invalid type definition, valid values are [object,template,query,resource,function,include]");
+		else throw new ApplicationException("Unsupported default cache type [" + strType + "], valid values are [object, template, query, resource, function, include]");
 
 		CacheConnection cc = config.getCacheDefaultConnection(type);
 		if (cc != null) {
@@ -4079,8 +4042,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		Cluster cluster = pageContext.clusterScope();
 		while (it.hasNext()) {
 			entry = Caster.toStruct(it.next());
-			cluster.setEntry(new ClusterEntryImpl(KeyImpl.getInstance(Caster.toString(entry.get(KeyConstants._key))),
-					Caster.toSerializable(entry.get(KeyConstants._value, null), null), Caster.toLongValue(entry.get(KeyConstants._time))));
+			cluster.setEntry(new ClusterEntryImpl(KeyImpl.init(Caster.toString(entry.get(KeyConstants._key))), Caster.toSerializable(entry.get(KeyConstants._value, null), null),
+					Caster.toLongValue(entry.get(KeyConstants._time))));
 		}
 
 		cluster.broadcast();
@@ -4268,6 +4231,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 
 	private void doUpdateAdminMode() throws PageException {
 		admin.updateUpdateAdminMode(getString("admin", "updateAdminMode", "mode"), getBool("admin", "updateAdminMode", "merge"), getBool("admin", "updateAdminMode", "keep"));
+		((GatewayEngineImpl) configWeb.getGatewayEngine()).stop();
 		store();
 		adminSync.broadcast(attributes, config);
 	}
@@ -4332,7 +4296,8 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 			String version = getString("version", null);
 			if (!StringUtil.isEmpty(version, true) && !"latest".equalsIgnoreCase(version)) ed = new ExtensionDefintion(id, version);
 			else ed = RHExtension.toExtensionDefinition(id);
-			DeployHandler.deployExtension(config, ed, config == null ? null : ThreadLocalPageContext.getLog(pageContext, "application"), true, true, throwOnError);
+			DeployHandler.deployExtension(config, ed, config == null ? null : ThreadLocalPageContext.getLog(pageContext, "application"), true, true, throwOnError,
+					new RefBooleanImpl());
 			return;
 		}
 
@@ -4358,13 +4323,13 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		// path
 		if (obj instanceof String) {
 			Resource src = ResourceUtil.toResourceExisting(config, (String) obj);
-			ConfigAdmin._updateRHExtension(config, src, true, true);
+			ConfigAdmin._updateRHExtension(config, src, true, true, RHExtension.ACTION_MOVE);
 		}
 		else {
 			try {
 				Resource tmp = SystemUtil.getTempFile("lex", true);
 				IOUtil.copy(new ByteArrayInputStream(Caster.toBinary(obj)), tmp, true);
-				ConfigAdmin._updateRHExtension(config, tmp, true, true);
+				ConfigAdmin._updateRHExtension(config, tmp, true, true, RHExtension.ACTION_MOVE);
 			}
 			catch (IOException ioe) {
 				throw Caster.toPageException(ioe);
@@ -4566,7 +4531,6 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doUpdateComponent() throws PageException {
 
 		admin.updateComponentDeepSearch(getBoolObject("admin", action, "deepSearch"));
-		admin.updateBaseComponent(getString("admin", action, "baseComponentTemplateCFML"), getString("admin", action, "baseComponentTemplateLucee"));
 		admin.updateComponentDumpTemplate(getString("admin", action, "componentDumpTemplate"));
 		admin.updateComponentDataMemberDefaultAccess(getString("admin", action, "componentDataMemberDefaultAccess"));
 		admin.updateTriggerDataMember(getBoolObject("admin", action, "triggerDataMember"));
@@ -4586,28 +4550,6 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 	private void doGetComponent() throws PageException {
 		Struct sct = new StructImpl();
 		pageContext.setVariable(getString("admin", action, "returnVariable"), sct);
-		// Base Component
-		try {
-			PageSource psCFML = config.getBaseComponentPageSource(CFMLEngine.DIALECT_CFML);
-
-			if (psCFML != null && psCFML.exists()) sct.set("baseComponentTemplateCFML", psCFML.getDisplayPath());
-			else sct.set("baseComponentTemplateCFML", "");
-		}
-		catch (PageException e) {
-			sct.set("baseComponentTemplateCFML", "");
-		}
-		try {
-			PageSource psLucee = config.getBaseComponentPageSource(CFMLEngine.DIALECT_LUCEE);
-
-			if (psLucee != null && psLucee.exists()) sct.set("baseComponentTemplateLucee", psLucee.getDisplayPath());
-			else sct.set("baseComponentTemplateLucee", "");
-
-		}
-		catch (PageException e) {
-			sct.set("baseComponentTemplateLucee", "");
-		}
-		sct.set("strBaseComponentTemplateCFML", config.getBaseComponentTemplate(CFMLEngine.DIALECT_CFML));
-		sct.set("strBaseComponentTemplateLucee", config.getBaseComponentTemplate(CFMLEngine.DIALECT_LUCEE));
 
 		// dump template
 		try {
@@ -5133,6 +5075,7 @@ public final class Admin extends TagImpl implements DynamicAttributes {
 		ApplicationListener appListener = config.getApplicationListener();
 		sct.set("type", AppListenerUtil.toStringType(appListener));
 		sct.set("mode", AppListenerUtil.toStringMode(appListener.getMode()));
+		sct.set("applicationPathTimeout", TimeSpanImpl.fromMillis(config.getApplicationPathCacheTimeout()));
 		// replaced with encoding outputsct.set("defaultencoding", config.get DefaultEncoding());
 	}
 
