@@ -29,6 +29,7 @@ import java.net.SocketTimeoutException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.charset.Charset;
+import java.security.GeneralSecurityException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
@@ -39,6 +40,8 @@ import org.apache.http.HttpEntityEnclosingRequest;
 import org.apache.http.HttpHost;
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
+import org.apache.http.client.config.CookieSpecs;
+import org.apache.http.client.config.RequestConfig;
 import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
 import org.apache.http.client.methods.HttpHead;
 import org.apache.http.client.methods.HttpOptions;
@@ -48,7 +51,6 @@ import org.apache.http.client.methods.HttpPut;
 import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.http.client.methods.HttpTrace;
 import org.apache.http.client.methods.HttpUriRequest;
-import org.apache.http.config.SocketConfig;
 import org.apache.http.entity.StringEntity;
 import org.apache.http.entity.mime.FormBodyPart;
 import org.apache.http.entity.mime.MultipartEntityBuilder;
@@ -167,7 +169,7 @@ public final class Http extends BodyTagImpl {
 	private static final short METHOD_TRACE = 6;
 	private static final short METHOD_PATCH = 7;
 
-	private static final List<String> methods = Arrays.asList(new String[] { "GET", "POST", "HEAD", "PUT", "DELETE", "OPTIONS", "TRACE", "PATCH" });
+	private static final List<String> methods = Arrays.asList(new String[] { "GET", "POST", "HEAD", "PUT", "DELETE", "OPTIONS", "TRACE", "PATCH", "QUERY" });
 
 	private static final String NO_MIMETYPE = "Unable to determine MIME type of file.";
 
@@ -178,14 +180,14 @@ public final class Http extends BodyTagImpl {
 	private static final Key STATUSCODE = KeyConstants._statuscode;
 	private static final Key CHARSET = KeyConstants._charset;
 
-	private static final Key ERROR_DETAIL = KeyImpl.getInstance("errordetail");
-	private static final Key STATUS_CODE = KeyImpl.getInstance("status_code");
-	private static final Key STATUS_TEXT = KeyImpl.getInstance("status_text");
-	private static final Key HTTP_VERSION = KeyImpl.getInstance("http_version");
-	private static final Key LOCATIONS = KeyImpl.getInstance("locations");
+	private static final Key ERROR_DETAIL = KeyConstants._errordetail;
+	private static final Key STATUS_CODE = KeyConstants._status_code;
+	private static final Key STATUS_TEXT = KeyConstants._status_text;
+	private static final Key HTTP_VERSION = KeyConstants._http_version;
+	private static final Key LOCATIONS = KeyConstants._locations;
 
-	private static final Key EXPLANATION = KeyImpl.getInstance("explanation");
-	private static final Key RESPONSEHEADER = KeyImpl.getInstance("responseheader");
+	private static final Key EXPLANATION = KeyConstants._explanation;
+	private static final Key RESPONSEHEADER = KeyConstants._responseheader;
 	private static final Key SET_COOKIE = KeyImpl.getInstance("set-cookie");
 
 	private static final short AUTH_TYPE_BASIC = 0;
@@ -303,6 +305,7 @@ public final class Http extends BodyTagImpl {
 	private String result = "cfhttp";
 
 	private boolean addtoken = false;
+	private boolean encode = true;
 
 	private short authType = AUTH_TYPE_BASIC;
 	private String workStation = null;
@@ -354,6 +357,7 @@ public final class Http extends BodyTagImpl {
 		multiPartType = MULTIPART_FORM_DATA;
 		result = "cfhttp";
 		addtoken = false;
+		encode = true;
 
 		authType = AUTH_TYPE_BASIC;
 		workStation = null;
@@ -616,16 +620,15 @@ public final class Http extends BodyTagImpl {
 	public void setMethod(String method) throws ApplicationException {
 		method = method.toUpperCase().trim();
 		short idx = (short) methods.indexOf(method);
-		if (idx < 0) throw new ApplicationException("invalid method type [" + method + "], valid types are [" + methods.toString() + "]");
+		if (idx < 0) throw new ApplicationException("invalid method type [" + method + "], valid types are [" + ListUtil.arrayToList(methods.toArray(new String[0]), ",") + "]");
 		this.method = idx;
 	}
 
 	private static String getMethodAsVerb(short method) throws ApplicationException {
-		if (method < 0 || method > methods.size() - 1) throw new ApplicationException("invalid method [" + method + "], valid types are [" + methods.toString() + "]"); // never
-																																										// will
-																																										// reach
-																																										// this, due
-																																										// to above
+		if (method < 0 || method > methods.size() - 1)
+			throw new ApplicationException("invalid method [" + method + "], valid types are [" + ListUtil.arrayToList(methods.toArray(new String[0]), ",") + "]"); // never will
+																																									// reach this,
+																																									// due to above
 
 		return methods.get(method);
 	}
@@ -683,18 +686,17 @@ public final class Http extends BodyTagImpl {
 			_doEndTag();
 			return EVAL_PAGE;
 		}
-		catch (IOException e) {
+		catch (Exception e) {
 			throw Caster.toPageException(e);
 		}
 	}
 
-	private void _doEndTag() throws PageException, IOException {
+	private void _doEndTag() throws PageException, IOException, GeneralSecurityException {
 
 		long start = System.nanoTime();
 		boolean safeToMemory = !StringUtil.isEmpty(result, true);
 
-		HttpClientBuilder builder = HTTPEngine4Impl.getHttpClientBuilder();
-		HTTPEngine4Impl.setConnectionManager(builder, this.usePool, this.clientCert, this.clientCertPassword);
+		HttpClientBuilder builder = HTTPEngine4Impl.getHttpClientBuilder(this.usePool, this.clientCert, this.clientCertPassword);
 
 		// redirect
 		if (redirect) builder.setRedirectStrategy(DefaultRedirectStrategy.INSTANCE);
@@ -1034,7 +1036,7 @@ public final class Http extends BodyTagImpl {
 			if (!hasHeaderIgnoreCase(req, "User-Agent")) req.setHeader("User-Agent", this.useragent);
 
 			// set timeout
-			setTimeout(builder, checkRemainingTimeout());
+			setTimeout(builder, Http.checkRemainingTimeout(pageContext, this.timeout));
 
 			// set Username and Password
 			if (this.username != null) {
@@ -1065,7 +1067,7 @@ public final class Http extends BodyTagImpl {
 			HTTPEngine4Impl.setProxy(host, builder, req, proxy);
 
 		}
-
+		HTTPResponse4Impl rsp = null;
 		CloseableHttpClient client = null;
 		try {
 			if (httpContext == null) httpContext = new BasicHttpContext();
@@ -1078,7 +1080,6 @@ public final class Http extends BodyTagImpl {
 			/////////////////////////////////////////// /////////////////////////////////////////////////
 			client = builder.build();
 			Executor4 e = new Executor4(pageContext, this, client, httpContext, req, redirect);
-			HTTPResponse4Impl rsp = null;
 
 			if (timeout == null || timeout.getMillis() <= 0) {
 				try {
@@ -1090,6 +1091,7 @@ public final class Http extends BodyTagImpl {
 					if (!throwonerror) {
 						if (t instanceof SocketTimeoutException) setRequestTimeout(cfhttp);
 						else setUnknownHost(cfhttp, t);
+						logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 						return;
 					}
 					throw toPageException(t, rsp);
@@ -1109,6 +1111,7 @@ public final class Http extends BodyTagImpl {
 				if (e.t != null) {
 					if (!throwonerror) {
 						setUnknownHost(cfhttp, e.t);
+						logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 						return;
 					}
 					throw toPageException(e.t, rsp);
@@ -1120,6 +1123,7 @@ public final class Http extends BodyTagImpl {
 					req.abort();
 					if (throwonerror) throw new HTTPException("408 Request Time-out", "a timeout occurred in tag http", 408, "Time-out", rsp == null ? null : rsp.getURL());
 					setRequestTimeout(cfhttp);
+					logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 					return;
 					// throw new ApplicationException("timeout");
 				}
@@ -1127,16 +1131,16 @@ public final class Http extends BodyTagImpl {
 
 			/////////////////////////////////////////// EXECUTE
 			/////////////////////////////////////////// /////////////////////////////////////////////////
-			Charset responseCharset = CharsetUtil.toCharset(rsp.getCharset());
 			int statCode = 0;
 			// Write Response Scope
 			// String rawHeader=httpMethod.getStatusLine().toString();
 			String mimetype = null;
 			String contentEncoding = null;
+			String rspCharset = null;
 
 			// status code
 			cfhttp.set(STATUSCODE, ((rsp.getStatusCode() + " " + rsp.getStatusText()).trim()));
-			cfhttp.set(STATUS_CODE, new Double(statCode = rsp.getStatusCode()));
+			cfhttp.set(STATUS_CODE, Double.valueOf(statCode = rsp.getStatusCode()));
 			cfhttp.set(STATUS_TEXT, (rsp.getStatusText()));
 			cfhttp.set(HTTP_VERSION, (rsp.getProtocolVersion()));
 			Array locations = rsp.getLocations();
@@ -1148,7 +1152,7 @@ public final class Http extends BodyTagImpl {
 			Struct responseHeader = new StructImpl();
 			Struct cookie;
 			Array setCookie = new ArrayImpl();
-			Query cookies = new QueryImpl(new String[] { "name", "value", "path", "domain", "expires", "secure", "httpOnly", "samesite" }, 0, "cookies");
+			Query cookies = new QueryImpl(new String[] { "name", "value", "path", "domain", "expires", "secure", "httpOnly", "samesite", "partitioned" }, 0, "cookies");
 
 			for (int i = 0; i < headers.length; i++) {
 				lucee.commons.net.http.Header header = headers[i];
@@ -1189,9 +1193,14 @@ public final class Http extends BodyTagImpl {
 				}
 
 			}
+
+			String[] tmpCharset = HTTPUtil.splitMimeTypeAndCharset(mimetype, null);
+			rspCharset = tmpCharset != null ? tmpCharset[1] : null;
+
+			cfhttp.set(KeyConstants._error, Boolean.FALSE); // default
 			cfhttp.set(RESPONSEHEADER, responseHeader);
 			cfhttp.set(KeyConstants._cookies, cookies);
-			responseHeader.set(STATUS_CODE, new Double(statCode = rsp.getStatusCode()));
+			responseHeader.set(STATUS_CODE, Double.valueOf(statCode = rsp.getStatusCode()));
 			responseHeader.set(EXPLANATION, (rsp.getStatusText()));
 			if (setCookie.size() > 0) responseHeader.set(SET_COOKIE, setCookie);
 
@@ -1229,12 +1238,14 @@ public final class Http extends BodyTagImpl {
 				if (Boolean.TRUE == _isText) {
 					String[] types = HTTPUtil.splitMimeTypeAndCharset(mimetype, null);
 					if (types[0] != null) cfhttp.set(KeyConstants._mimetype, types[0]);
-					if (types[1] != null) cfhttp.set(CHARSET, types[1]);
-
+					if (types[1] != null) rspCharset = types[1]; // only text types have charset
 				}
 				else cfhttp.set(KeyConstants._mimetype, mimetype);
 			}
 			else cfhttp.set(KeyConstants._mimetype, NO_MIMETYPE);
+
+			// charset
+			cfhttp.set(CHARSET, rspCharset != null ? rspCharset : "");
 
 			// File
 			Resource file = null;
@@ -1259,10 +1270,14 @@ public final class Http extends BodyTagImpl {
 			// filecontent
 
 			if (Boolean.TRUE == _isText && getAsBinary != GET_AS_BINARY_YES && safeToMemory) {
+				String tmp = rsp.getCharset();
+				Charset responseCharset = StringUtil.isEmpty(tmp, true) ? null : CharsetUtil.toCharset(tmp);
 				// store to memory
 				String str;
-				if (barr == null) str = contentAsString(rsp, responseCharset, contentEncoding, e);
-				else str = IOUtil.toString(barr, responseCharset);
+
+				Charset cs = (StringUtil.isEmpty(charset)) ? responseCharset : CharsetUtil.toCharset(charset, responseCharset);
+				if (barr == null) str = contentAsString(rsp, cs, contentEncoding, e);
+				else str = IOUtil.toString(barr, cs);
 				cfhttp.set(KeyConstants._filecontent, str);
 
 				// store to file
@@ -1309,8 +1324,11 @@ public final class Http extends BodyTagImpl {
 				String msg = rsp.getStatusCode() + " " + rsp.getStatusText();
 				cfhttp.setEL(ERROR_DETAIL, msg);
 				if (throwonerror) {
-					throw new HTTPException(msg, null, rsp.getStatusCode(), rsp.getStatusText(), rsp.getURL());
+					URL url = rsp.getURL();
+					String details = getMethodAsVerb(method) + " " + url.toExternalForm();
+					throw new HTTPException(msg, details, rsp.getStatusCode(), rsp.getStatusText(), url);
 				}
+				cfhttp.setEL(KeyConstants._error, Boolean.TRUE);
 			}
 
 			// TODO: check if we can use statCode instead of rsp.getStatusCode() everywhere and cleanup the code
@@ -1322,6 +1340,7 @@ public final class Http extends BodyTagImpl {
 			logHttpRequest(pageContext, cfhttp, url, req.getMethod(), System.nanoTime() - start, false);
 		}
 		finally {
+			if (rsp != null) rsp.close();
 			if (client != null) client.close();
 		}
 	}
@@ -1399,30 +1418,24 @@ public final class Http extends BodyTagImpl {
 			}
 			try {
 				try {
-					str = is == null ? "" : IOUtil.toString(is, responseCharset, checkRemainingTimeout().getMillis());
+					str = is == null ? "" : IOUtil.toString(is, responseCharset, Http.checkRemainingTimeout(pageContext, this.timeout).getMillis());
 				}
 				catch (EOFException eof) {
 					if (is instanceof CachingGZIPInputStream) {
-						str = IOUtil.toString(is = ((CachingGZIPInputStream) is).getRawData(), responseCharset, checkRemainingTimeout().getMillis());
+						str = IOUtil.toString(is = ((CachingGZIPInputStream) is).getRawData(), responseCharset, Http.checkRemainingTimeout(pageContext, this.timeout).getMillis());
 					}
 					else throw eof;
 				}
 			}
 			catch (UnsupportedEncodingException uee) {
-				str = IOUtil.toString(is, (Charset) null, checkRemainingTimeout().getMillis());
+				str = IOUtil.toString(is, (Charset) null, Http.checkRemainingTimeout(pageContext, this.timeout).getMillis());
 			}
 		}
 		catch (IOException ioe) {
 			throw Caster.toPageException(ioe);
 		}
 		finally {
-			try {
-				IOUtil.close(is);
-			}
-			catch (IOException ioe) {
-				throw Caster.toPageException(ioe);
-
-			}
+			IOUtil.closeEL(is);
 		}
 
 		if (str == null) str = "";
@@ -1433,10 +1446,10 @@ public final class Http extends BodyTagImpl {
 		return str;
 	}
 
-	private TimeSpan checkRemainingTimeout() throws RequestTimeoutException {
-		TimeSpan remaining = PageContextUtil.remainingTime(pageContext, true);
-		if (this.timeout == null || ((int) this.timeout.getSeconds()) <= 0 || timeout.getSeconds() > remaining.getSeconds()) { // not set
-			this.timeout = remaining;
+	public static TimeSpan checkRemainingTimeout(PageContext pc, TimeSpan timeout) throws RequestTimeoutException {
+		TimeSpan remaining = PageContextUtil.remainingTime(pc, true);
+		if (timeout == null || ((int) timeout.getSeconds()) <= 0 || (timeout.getSeconds() > remaining.getSeconds() && remaining.getSeconds() > 0)) { // not set
+			return remaining;
 		}
 		return timeout;
 	}
@@ -1489,6 +1502,7 @@ public final class Http extends BodyTagImpl {
 		String n, v;
 		cookies.setAtEL("secure", row, Boolean.FALSE);
 		cookies.setAtEL("httpOnly", row, Boolean.FALSE);
+		cookies.setAtEL("partitioned", row, Boolean.FALSE);
 		for (int i = 1; i < arr.length; i++) {
 			item = arr[i];
 			index = item.indexOf('=');
@@ -1550,9 +1564,10 @@ public final class Http extends BodyTagImpl {
 		cfhttp.setEL(KeyConstants._mimetype, "Unable to determine MIME type of file.");
 		cfhttp.setEL(RESPONSEHEADER, new StructImpl());
 		cfhttp.setEL(STATUSCODE, "Connection Failure. Status code unavailable.");
-		cfhttp.setEL(STATUS_CODE, new Double(0));
+		cfhttp.setEL(STATUS_CODE, Double.valueOf(0));
 		cfhttp.setEL(STATUS_TEXT, "Connection Failure");
 		cfhttp.setEL(KeyConstants._text, Boolean.TRUE);
+		cfhttp.setEL(KeyConstants._error, Boolean.TRUE);
 	}
 
 	private void setRequestTimeout(Struct cfhttp) {
@@ -1563,9 +1578,10 @@ public final class Http extends BodyTagImpl {
 		cfhttp.setEL(KeyConstants._mimetype, "Unable to determine MIME type of file.");
 		cfhttp.setEL(RESPONSEHEADER, new StructImpl());
 		cfhttp.setEL(STATUSCODE, "408 Request Time-out");
-		cfhttp.setEL(STATUS_CODE, new Double(408));
+		cfhttp.setEL(STATUS_CODE, Double.valueOf(408));
 		cfhttp.setEL(STATUS_TEXT, "Request Time-out");
 		cfhttp.setEL(KeyConstants._text, Boolean.TRUE);
+		cfhttp.setEL(KeyConstants._error, Boolean.TRUE);
 	}
 
 	private static boolean hasHeaderIgnoreCase(HttpRequestBase req, String name) {
@@ -1608,9 +1624,9 @@ public final class Http extends BodyTagImpl {
 	}
 
 	private static void logHttpRequest(PageContext pc, Struct data, String url, String method, long executionTimeNS, boolean cached) throws PageException {
-		Log log = ThreadLocalPageContext.getLog(pc, "trace");
-		if (log != null && log.getLogLevel() <= Log.LEVEL_INFO) log.log(Log.LEVEL_INFO, "cftrace", "httpRequest [" + method + "] to [" + url + "], returned ["
-				+ data.get(STATUSCODE) + "] in " + (executionTimeNS / 1000000) + "ms, " + (cached ? "(cached response)" : "") + " at " + CallStackGet.call(pc, "text"));
+		Log log = ThreadLocalPageContext.getLog(pc, "application");
+		if (log != null) log.log(Log.LEVEL_TRACE, "cftrace", "httpRequest [" + method + "] to [" + url + "], returned [" + data.get(STATUSCODE) + "] in "
+				+ (executionTimeNS / 1000000) + "ms, " + (cached ? "(cached response)" : "") + " at " + CallStackGet.call(pc, "text"));
 	}
 
 	@Override
@@ -1683,6 +1699,13 @@ public final class Http extends BodyTagImpl {
 	 */
 	public void setAddtoken(boolean addtoken) {
 		this.addtoken = addtoken;
+	}
+
+	/**
+	 * @param encode encode the URL
+	 */
+	public void setEncode(boolean encode) {
+		this.encode = encode;
 	}
 
 	/**
@@ -1838,9 +1861,10 @@ public final class Http extends BodyTagImpl {
 		int ms = (int) timeout.getMillis();
 		if (ms < 0) ms = Integer.MAX_VALUE;
 
+		builder.setDefaultRequestConfig(
+				RequestConfig.custom().setCookieSpec(CookieSpecs.STANDARD).setConnectionRequestTimeout(ms).setConnectTimeout(ms).setSocketTimeout(ms).build());
+
 		// builder.setConnectionTimeToLive(ms, TimeUnit.MILLISECONDS);
-		SocketConfig sc = SocketConfig.custom().setSoTimeout(ms).build();
-		builder.setDefaultSocketConfig(sc);
 	}
 
 }
